# TurtleBot3

./: .gitmodules  LICENSE  README.md  frames_2024-10-29_19.01.47.gv  reachable_positions.npy
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camara/lib/camara/: camara_client  camara_server
install/camara/share/camara/: package.dsv  package.sh  package.zsh
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: package.sh
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: package.sh
install/explore_cpp/lib/explore_cpp/: explore_node
install/explore_cpp/share/explore_cpp/: package.bash  package.dsv  package.sh  package.zsh
install/hazmat_marker/lib/hazmat_marker/: hazmat_marker
install/hazmat_marker/share/hazmat_marker/: package.bash  package.dsv  package.sh  package.xml
install/joint_state_publisher_custom/lib/joint_state_publisher_custom/: joint_state_publisher
install/joint_state_publisher_custom/share/joint_state_publisher_custom/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/laser_scan_adjuster/lib/laser_scan_adjuster/: adjust_scan
install/laser_scan_adjuster/share/laser_scan_adjuster/: package.dsv  (+2 more)
log/: latest_build
src/: fluxdiagram1.py  gauge.py  mapLabB.pgm  mapLabB.yaml  mapaRobotec.pgm  mapaRobotec.yaml  mapanalyzer.py  mechanism.py  mechanism2.py  opencamera.py  parallel.urdf
src/explore_cpp/: CMakeLists.txt  package.xml
src/explore_cpp/src/: explore_node.cpp
src/hazmat_marker/: setup.cfg  setup.py
src/hazmat_marker/hazmat_marker/: hazmat_marker.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/joint_state_publisher_custom/: setup.cfg  setup.py
src/laser_scan_adjuster/: setup.cfg  setup.py
src/log/: latest_build  latest_list
src/motor_position_controller/: setup.cfg  setup.py
src/motor_position_controller/scripts/: motor_position_controller_node.py
src/turtlebot3_explore/: package.xml  setup.cfg  setup.py
src/turtlebot3_explore/turtlebot3_explore/: explore.py
src/turtlebot3_poi_navigation/: package.xml  setup.cfg  setup.py
src/turtlebot3_poi_navigation/scripts/: poi_manager.py
src/turtlebot3_poi_navigation/turtlebot3_poi_navigation/: poi_manager.py
(+58 files in other folders)
