<?xml version="1.0"?>
<package format="2">
  <name>explore_cpp</name>
  <version>0.0.1</version>
  <description>Enhanced Exploration Node for TurtleBot3 in C++.</description>
  <maintainer email="your_email@example.com">Gerardo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend> <!-- Added -->
  <depend>Eigen3</depend>
  <depend>opencv4</depend> <!-- Adjust based on your OpenCV version -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
