<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_explore</name>
  <version>0.0.1</version>
  <description>Nodo de ROS2 para la exploración autónoma de un robot móvil utilizando Nav2 y SLAM Toolbox.</description>
  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_simple_commander</depend>
  <depend>sklearn</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
